--- a/index.html
+++ b/index.html
@@ -14,19 +14,24 @@
       text-align: center;
     }
 
-    table {
+     table {
       border-collapse: collapse;
       margin: 20px auto;
       width: 80%;
       max-width: 300px;
+      border: 4px solid #000; /* Add a border to the table */
     }
 
     td {
       width: 33.33%;
-      height: 40px;
+      height: 75px;
       text-align: center;
-      border: 1px solid #ddd;
+      border: 4px solid #ddd;
       cursor: pointer;
+    }
+
+    td:hover {
+      background-color: #f5f5f5; /* Add a background color on hover */
     }
 
     #display-box {
